refine coordinator by new APIs
